--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,6 +13,13 @@ h2 {
   font-size: 35px;
 }
 
+a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  padding-bottom: 20px;
+}
 
 .collapse {
   display: flex;
