--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -29,6 +29,7 @@ a {
   color: white;
   cursor: pointer;
   padding: 18px;
+  margin-left: 26px;
   width: 100%;
   border: none;
   text-align: left;
@@ -42,6 +43,7 @@ a {
   overflow: hidden;
   background-color: #ede0bb;
   margin-bottom: 10px;
+  justify-content: center;
 }
 
 p {
@@ -61,6 +63,47 @@ body {
 iframe {
   display:flex;
   justify-content: center;
-  padding-left: 60px;
   border: none;
+  margin-bottom: 20px;
+  margin-left: 200px;
+}
+
+#mySidebar {
+  z-index: 2;
+  width: 250px;
+  color: white;
+  background-color: #1a4287;
+  margin-right: 10px;
+}
+
+#topBar {
+  font-size: 24px;
+  font-weight: bold;
+  color: white;
+  background-color: #1a4287;
+  margin-bottom: 40px;
+}
+
+@media (max-width: 992px) {
+  .w3-sidebar.w3-collapse {
+    display: none;
+  }
+  .main {
+    margin-left: 40px;
+    margin-right: 40px;
+  }
+  .w3-auto {
+    max-width: 100%;
+  }
+}
+.w3-sidebar img {
+  margin-top: 15%;
+  margin-left: 25%;
+  display: flex;
+  align-self: center;
+  height: 50%;
+  width: 50%;
+}
+.w3-bar-block a:hover {
+  background-color: #deac2f;
 }
