--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,7 +4,7 @@ h1 {
   align-items: center;
   padding: 2.5px;
   font-size: 45px;
-  padding-top: 75px;
+  padding-top: 85px;
 }
 h2 {
   display: flex;
@@ -86,11 +86,14 @@ iframe {
 }
 
 #topBar {
-  font-size: 24px;
   font-weight: bold;
   color: white;
   background-color: #1a4287;
   margin-bottom: 40px;
+}
+
+#topBar a{
+  font-size: 42px;
 }
 
 @media (max-width: 992px) {
