--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,14 +12,27 @@ h2 {
   align-items: center;
   padding: 5px;
   font-size: 35px;
+  font-style: bold;
 }
 
+h2:hover {
+  cursor:pointer;
+}
+
+h3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  font-size: 35px;
+}
 a {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 30px;
+  font-size: 24px;
   padding-bottom: 20px;
+  text-decoration: underline;
 }
 
 .collapse {
@@ -36,6 +49,15 @@ a {
   outline: none;
   font-size: 32px;
   margin-bottom: 10px;
+}
+
+button:hover{
+  cursor:pointer;
+}
+
+button {
+  text-size: 30px;
+  text-decoration: underline;
 }
 
 .descriptions {
@@ -78,11 +100,12 @@ iframe {
 }
 
 #mySidebar {
-  z-index: 2;
+  z-index: 3;
   width: 250px;
   color: white;
   background-color: #1a4287;
-  margin-right: 10px;
+  margin-right: 20%;
+
 }
 
 #topBar {
@@ -108,14 +131,27 @@ iframe {
     max-width: 100%;
   }
 }
-.w3-sidebar img {
-  margin-top: 15%;
-  margin-left: 25%;
-  display: flex;
-  align-self: center;
-  height: 50%;
-  width: 50%;
+
+@media (max-width: 992px) {
+  .w3-sidebar.w3-collapse {
+    display: none;
+  }
+  .container {
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .w3-auto {
+    max-width: 100%;
+  }
 }
+
+
 .w3-bar-block a:hover {
   background-color: #deac2f;
+}
+.wrapper {
+  background: #84e8fa;
+  min-height: 100%;
+  width: 90%;
+  padding-left: 10%;
 }
