--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,8 +5,16 @@ h1 {
   justify-content: center;
   align-items: center;
   padding: 2.5px;
-  font-size: 45px;
   padding-top: 85px;
+  text-shadow: .05px 2px 2px black;
+  font-family: "Arial Black", Gadget, sans-serif;
+  font-size: 50px;
+  letter-spacing: 2px;
+  word-spacing: 2px;
+  font-weight: normal;
+  text-decoration: none;
+  font-variant: normal;
+  text-transform: none;
 }
 h2 {
   display: flex;
@@ -53,12 +61,21 @@ a {
   margin-bottom: 10px;
 }
 
+
+
+button.collapse {
+  width: 50%;
+}
+
 button:hover{
   cursor:pointer;
 }
 
 button {
-  text-size: 30px;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  font-size: 30px;
   text-decoration: underline;
 }
 
@@ -103,10 +120,10 @@ iframe {
 
 #mySidebar {
   z-index: 3;
-  width: 250px;
+  width: 230px;
   color: white;
   background-color: #1a4287;
-  margin-right: 20%;
+  padding-right: 25px;
 
 }
 
@@ -152,8 +169,16 @@ iframe {
   background-color: #deac2f;
 }
 .wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
   background: #84e8fa;
   min-height: 100%;
   width: 90%;
-  padding-left: 20%;
+}
+
+#portfolio {
+  display: flex;
+  justify-content: center;
 }
